[package]
name = "down2me"
version = "0.1.0"
authors = ["Rellyson Silva <rellysonsilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.7"
youtube_dl = "0.6.0"